# codings

./: .gitignore  CLAUDE.md  GAS_TECHNICAL_ANALYSIS.md  README_ja.md  build  make.conf  package.json  pswdfm.txt  quantize-fp16-to-q5_k_m.ipynb  setup-gentoo.md  setup-linux.md  shogun-migration.patch  tmpfs.txt  use
.github/: dependabot.yml
.github/workflows/: claude.yml  cups-integration-test.yml  onedrive-photo-migration.yml
Admin-Page/: AdminPage.html  Admin_Approval.gs  Admin_Auth.gs  Admin_Code.gs  Admin_Config.gs  Admin_Data.gs  Admin_Setting.gs  Admin_Utils.gs  CodeEntryJavaScript.html  CodeEntryPage.html  ErrorPage.html
Intake-delivery-record/: Api_Client.gs  Auth.gs  Code.gs  Config.gs  ErrorPage.html  ExternalApi.gs  JavaScript_Api.html  JavaScript_Api.js  JavaScript_Main.html  JavaScript_Main.js  JavaScript_UI.html  JavaScript_UI.js  Ocr-Settings.gs  PageVersion.html  Service.gs  Style.html  Trigger_Cache.gs  Utils.gs
Inventry-Management/: InventoryManagement.bas  README.md  セットアップ手順.md  データ構造.md  使い方ガイド.md  入出庫_2025-10.csv  棚卸_2025-11-12 (1).csv
Inventry-Management/VBA/: AlertDashboard.bas  CSVHandler.bas  InventoryOperations.bas  Main.bas  MasterManagement.bas  OrderManagement.bas  README_インポート手順.txt  TransactionLog.bas  TrendAnalysis.bas  Utils.bas  統括在庫管理システム.xlsm
Inventry-Management/サンプルデータ/: サンプルマスター.csv  サンプル入出庫.csv  サンプル棚卸.csv
ai-photo-analyzer/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai-photo-analyzer/.github/workflows/: batch-process.yml
ai-photo-analyzer/config/: settings.yaml
ai-photo-analyzer/docs/: ONLINE_SETUP.md
ai-photo-analyzer/notebooks/: photo_analyzer_colab.ipynb
ai-photo-analyzer/src/: __init__.py  cloud_runner.py  main.py
ai-photo-analyzer/src/services/: __init__.py  batch_processor.py  file_watcher.py  image_processor.py  raw_processor.py  translation_service.py  vision_service.py  xmp_generator.py
ai-photo-analyzer/src/utils/: __init__.py  config.py  logger.py
ai-photo-analyzer/tests/: __init__.py  test_image_processor.py  test_xmp_generator.py
ashigaru/: ollama_web_search.py
bve5-to-bve4-converter/: README.md
bve5-to-bve4-converter/examples/: sample_bve5.txt  sample_bve5_bve4.txt
bve5-to-bve4-converter/src/: __init__.py  cli.py  converter.py
custom_components/cups/: MAINTENANCE.md  README.md  __init__.py  const.py  manifest.json  requirements.txt
custom_components/nature_remo/: __init__.py  climate.py
custom_components/nature_remo_lapis/: README.md  __init__.py  api.py  climate.py  config_flow.py  const.py  light.py  manifest.json  remote.py  sensor.py  switch.py
custom_components/nature_remo_lapis/translations/: en.json  ja.json
exportCSV/: Code.gs  README.md  index.html
fcitx5-mozc-ut-overlay/: README.md
fcitx5-mozc-ut-overlay/app-i18n/fcitx5-mozc-ut/: fcitx5-mozc-ut-2.32.5994.102.ebuild
fcitx5-mozc-ut-overlay/profiles/: repo_name
inventry-data/: Code.gs  index.html
item-master-editor/: Code.gs  README.md  index.html
loginform/: Auth.gs  Cache.gs  Code.gs  Config.gs  JavaScript.html  Style.html  Utils.gs  index.html
onedrive-photo-migration/: README.md  onedrive_photo_fixer.py  requirements.txt
openbve-mobile-loader/: README.md
openbve-mobile-loader/Docs/: ADVANCED_FEATURES.md  B3D_FORMAT.md  BVE_COMPATIBILITY.md  CSV_FORMAT.md  SETUP_GUIDE.md  SOUND_SYSTEM.md
openbve-mobile-loader/Scripts/Audio/: SoundManager.cs  TrainSoundController.cs
openbve-mobile-loader/Scripts/Controllers/: CameraController.cs  TrainController.cs
openbve-mobile-loader/Scripts/Core/: DynamicObjectSystem.cs  GameManager.cs  (+2 more)
photo-metadata-tool/: README.md  photo_metadata_tool.py  photp-fixer-Ultimate.py
pwa-warehouse-app/: DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  README.md
pwa-warehouse-app/intake-delivery/: index.html  manifest.json  sw.js
pwa-warehouse-app/login/: index.html  manifest.json  sw.js
shogun/: .env.example  README.md  README_ja.md  README_v8.md  __init__.py  cli.py  main.py  main_v8.py  pyproject.toml  requirements.txt  requirements_v8.txt
shogun/agents/: __init__.py  base.py  factory.py  taisho.py
shogun/ashigaru/: groq_recorder.py
shogun/config/: mcp_config.json  settings.yaml  settings_v7.yaml  settings_v8.yaml
shogun/config/modelfiles/: coder.Modelfile  leader.Modelfile  scout.Modelfile  taisho.Modelfile
shogun/core/: __init__.py  activity_memory.py  ashigaru_selection.py  complexity.py  controller.py  dashboard.py  error_handling.py  escalation.py  integrated_shogun.py  knowledge_base.py  maintenance.py  mcp_manager.py  rag_integration.py  sandbox_executor.py  system_orchestrator.py  task_queue.py
shogun/instructions/: ashigaru.md  karo.md  maintenance.md  shogun.md  taisho.md
shogun/integrations/: ha_interface.py  notion_integration.py  slack_bot.py  slack_v7.py
shogun/providers/: __init__.py  anthropic_api.py  claude_cli.py  ollama.py  openvino_client.py
shogun/setup/: deploy_v8.sh  install.sh  maintenance.sh  ollama_setup.sh  openvino_setup.sh  proxmox_setup.sh  setup_groq.sh  setup_r1_japanese.sh
shogun/templates/: context_template.md
shogun/tests/: test_error_handling.py  test_integration_v7.py
(+21 files in other folders)
