[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omni-p4-shogun"
version = "3.0.0"
description = "Omni-P4 Shogun-Hybrid: 階層型ハイブリッドAI開発システム"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
cloud = ["anthropic>=0.40.0"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
shogun = "shogun.cli:main"

[tool.setuptools.packages.find]
include = ["shogun*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
