[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omni-p4-shogun"
version = "5.0.0"
description = "Omni-P4 将軍システム Hybrid: 階層型ハイブリッドAI開発システム"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
cloud = ["anthropic>=0.40.0"]
slack = ["slack-sdk>=3.30.0"]
dev = ["pytest", "pytest-asyncio", "ruff"]
all = ["anthropic>=0.40.0", "slack-sdk>=3.30.0"]

[project.scripts]
shogun = "shogun.cli:main"

[tool.setuptools.packages.find]
include = ["shogun*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
